<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background_map">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/img_b_g_s_i_g_n_i_n_2"
                android:adjustViewBounds="true"/>

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="22dp"
                android:src="@drawable/icon_back_arrow" />

            <TextView
                android:id="@+id/already_taken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="97dp"
                android:gravity="center_horizontal"
                android:text="@string/not_found"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/trimbe_white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_below="@+id/already_taken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:orientation="vertical"
                android:background="@color/hint_background">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/message_icon"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="21dp"
                        android:layout_marginBottom="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/img_icon_id"/>
                    <TextView
                        android:id="@+id/message_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:paddingStart="18dp"
                        android:paddingEnd="0dp"
                        android:layout_toEndOf="@+id/message_icon"
                        android:layout_centerVertical="true"
                        android:text="@string/gamertag_entered"
                        android:textColor="@color/support_email"/>
                </RelativeLayout>
                <TextView
                    android:id="@+id/error_message"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/trimbe_white"
                    android:paddingStart="20dp"
                    android:paddingEnd="14dp"
                    android:paddingBottom="16dp"
                    android:text="@string/not_found_message"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/contact_us"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/app_theme_color"
        android:gravity="center"
        android:text="@string/contact_us"
        android:textAllCaps="true"
        android:textColor="@color/trimbe_white"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>