<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:background="@drawable/img_background_map">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img_b_g_s_i_g_n_i_n_2"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"/>

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="60dp"-->
        <!--android:id="@+id/error_layout"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:background="@android:color/black"-->
        <!--android:visibility="gone">-->
        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/error"-->
            <!--android:src="@drawable/icon_error"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:layout_marginLeft="22dp"/>-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/error_text"-->
            <!--android:text="MISADVENTURE"-->
            <!--android:textSize="12sp"-->
            <!--android:textColor="#ff0000"-->
            <!--android:layout_toRightOf="@+id/error"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:layout_marginLeft="13dp"/>-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/error_sub"-->
            <!--android:text="Your Username or Password do not match"-->
            <!--android:textSize="12sp"-->
            <!--android:textColor="@color/trimbe_white"-->
            <!--android:layout_toRightOf="@+id/error"-->
            <!--android:layout_below="@+id/error_text"-->
            <!--android:layout_marginBottom="14dp"-->
            <!--android:layout_marginLeft="13dp"-->
            <!--android:layout_marginRight="30dp"/>-->

        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/err_close"-->
            <!--android:src="@drawable/icon_close_sm"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_marginTop="9dp"-->
            <!--android:layout_marginEnd="7dp"/>-->
    <!--</RelativeLayout>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_pswrd_layout"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_backbtn"
            android:src="@drawable/icon_back_arrow"
            android:paddingTop="22dp"
            android:paddingRight="20dp"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_accnt"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/trimbe_white"
            android:layout_below="@+id/signup_backbtn"
            android:layout_marginTop="25dp"
            android:text="@string/create_crossroads_accnt"
            android:layout_centerHorizontal="true"
            android:textSize="12sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/name_layout"
            android:layout_marginTop="18dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/hint_background"
            android:layout_below="@+id/create_accnt">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/name_icon"
                android:src="@drawable/img_icon_email"
                android:layout_centerVertical="true"
                android:layout_marginStart="17dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="22dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/signup_name"
                android:hint="Enter email address"
                android:textColorHint="@color/region_hint_textcolor"
                android:textColor="@color/trimbe_white"
                android:textCursorDrawable="@drawable/cursor_draw"
                android:background="@null"
                android:textSize="18sp"
                android:inputType="textVisiblePassword"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:layout_toRightOf="@+id/name_icon"
                android:gravity="center_vertical"
                android:layout_marginLeft="25dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/pswd_layout"
            android:layout_marginTop="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            android:background="@color/hint_background"
            android:layout_below="@+id/name_layout">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/pswrd_icon"
                android:src="@drawable/img_icon_password"
                android:layout_centerVertical="true"
                android:layout_marginStart="17dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="22dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/signup_pswrd"
                android:hint="Enter password"
                android:textColorHint="@color/region_hint_textcolor"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@drawable/cursor_draw"
                android:background="@null"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/signup_btn"
                android:textSize="18sp"
                android:layout_toRightOf="@+id/pswrd_icon"
                android:gravity="center_vertical"
                android:layout_marginLeft="22dp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signup_show_pswd"
                android:src="@drawable/icon_showpassword"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="4dp"/>
        </RelativeLayout>
    </RelativeLayout>

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="60dp"-->
        <!--android:id="@+id/psnid_layout"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginStart="10dp"-->
        <!--android:layout_marginEnd="10dp"-->
        <!--android:background="#4f000000"-->
        <!--android:layout_above="@+id/name_layout">-->
        <!--<ImageView-->
            <!--android:layout_width="25dp"-->
            <!--android:layout_height="25dp"-->
            <!--android:id="@+id/psn_icon"-->
            <!--android:src="@drawable/img_icon_id"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginStart="17dp"-->
            <!--android:layout_marginTop="13dp"-->
            <!--android:layout_marginBottom="22dp"/>-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/psn"-->
            <!--android:layout_toRightOf="@+id/psn_icon"-->
            <!--android:fontFamily="sans-serif"-->
            <!--android:layout_marginLeft="25dp"-->
            <!--android:layout_marginTop="13dp"-->
            <!--android:textSize="10sp"/>-->
        <!--<EditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:id="@+id/signup_psn"-->
            <!--android:textCursorDrawable="@drawable/cursor_draw"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:singleLine="true"-->
            <!--android:imeOptions="actionDone"-->
            <!--android:background="@null"-->
            <!--android:textSize="14sp"-->
            <!--android:layout_toRightOf="@+id/psn_icon"-->
            <!--android:layout_below="@+id/psn"-->
            <!--android:layout_marginTop="9dp"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:layout_marginLeft="25dp" />-->
    <!--</RelativeLayout>-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center"-->
        <!--android:id="@+id/privacy_terms"-->
        <!--android:textColorLink="@color/app_theme_color"-->
        <!--android:layout_above="@+id/signup_btn"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:layout_marginRight="2dp"-->
        <!--android:layout_marginLeft="2dp"-->
        <!--android:textColor="@color/trimbe_white"-->
        <!--android:textSize="12sp"-->
        <!--android:text="@string/terms_conditions"/>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/signup_btn"
        android:background="@color/app_theme_color"
        android:text="@string/next"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:layout_alignParentBottom="true"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/signup_privacy_terms"
        android:textColorLink="@color/app_theme_color"
        android:layout_above="@+id/signup_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/trimbe_white"
        android:textSize="12sp"
        android:text="@string/terms_conditions"/>

    <WebView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:id="@+id/signup_web"
        android:visibility="gone">
    </WebView>

    <include layout="@layout/activity_base" />

    <!--<WebView-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:id="@+id/web"-->
        <!--android:visibility="gone">-->
    <!--</WebView>-->
</RelativeLayout>